--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,7 +255,7 @@ body {
 
 .footer-contacts .social-links {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -310,8 +310,81 @@ footer {
     background-image: linear-gradient(45deg, #0274d845, #fff);
 }
 
-/* alignment justify */
-
 .justified {
     text-align: justify;
+}
+
+/* career page */
+
+.career-hero {
+    background: linear-gradient(120deg, #0d6efd, #084298);
+    color: #fff;
+    padding: 120px 20px 60px;
+    text-align: center;
+}
+
+.career-accordion .accordion-button {
+    /* border-radius: 12px; */
+    background: #ffffff;
+    padding: 20px;
+    font-size: 1.05rem;
+    color: #444 !important;
+}
+
+.career-accordion .accordion-button:not(.collapsed) {
+    background: #f1f5ff;
+    color: #0d6efd;
+}
+
+.career-accordion .accordion-item {
+    border-radius: 12px;
+    border: 1px solid #fafafa !important;
+}
+
+.career-accordion .accordion-body {
+    background: #ffffff;
+    border-radius: 0 0 12px 12px;
+    color: #666;
+}
+
+.apply-section {
+    /* background: #fff; */
+    padding: 50px 20px;
+    border-radius: 10px;
+}
+
+.apply-section h2,
+.openings h2 {
+    font-size: 23px;
+    margin-bottom: 2.2rem;
+    color: #0d6efd;
+}
+
+@media (max-width: 768px) {
+    .career-hero {
+        padding: 80px 20px 40px;
+    }
+}
+
+@media (max-width: 576px) {
+    .career-hero h1 {
+        font-size: 28px;
+    }
+
+    .career-accordion .accordion-button {
+        padding: 20px;
+        font-size: 0.8rem;
+    }
+
+    .career-accordion .accordion-body {
+        font-size: 0.8rem;
+    }
+
+    .apply-section label, .apply-section input {
+        font-size: 14px;
+    }
+
+    .apply-section input {
+        padding: 10px;
+    }
 }
